--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
+}
+
+.container__botao:checked ~ .container__lista-menu {
+    display: block;
 }
 
 .cabecalho__menu-hamburguer {
@@ -21,4 +26,10 @@
 
 .container__imagens {
     padding: 0.7em;
+}
+
+.container__lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
 }
