--- a/style.css
+++ b/style.css
@@ -5,8 +5,12 @@
     --branco: #FFFFFF;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --font-principal: "Poppins", sans-serif;
 }
 
 body {
     background-color: var(--cor-primario);
+    font-family: var(--font-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
