--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("styles/header.css");
 @import url('styles/banner.css');
+@import url('styles/corrosel.css');
 
 :root {
     --cor-primario: #EBECEE;
