--- a/styles/corrosel.css
+++ b/styles/corrosel.css
@@ -20,3 +20,56 @@
     position: initial;
     margin: 0.5em 0em;
 }
+
+.card {
+    background-color: var(--branco);
+    box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin: 1em;
+    padding: 1em;
+}
+
+.card__descricao {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.descricao__titulo {
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.descricao__titulo-livro {
+    color: blue;
+    font-size: 1.12rem;
+    font-weight: 700;
+    margin: 0.5em 0em;
+}
+
+.descricao__texto {
+    font-size: 0.9rem;
+}
+
+.card__botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes {
+    display: flex;
+}
+
+.botoes__itens {
+    margin: 0em 0.5em;
+}
+
+.botoes__ancora {
+    background-color: var(--laranja);
+    color: var(--branco);
+    padding: 1em 1.8em;
+    font-size: 1rem;
+    font-weight: 700;
+    text-decoration: none;
+    border-radius: 7px;
+}
