--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url('styles/banner.css');
 @import url('styles/corrosel.css');
 @import url('styles/topicos.css');
+@import url('styles/contato.css');
+@import url('styles/rodape.css');
 
 :root {
     --cor-primario: #EBECEE;
