--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@
     --branco: #FFFFFF;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --preta: #000000;
+
     --font-principal: "Poppins", sans-serif;
+    --font-secundaria: "Josefin Sans", sans-serif;
 }
 
 body {
