--- a/styles/banner.css
+++ b/styles/banner.css
@@ -32,3 +32,17 @@
     color: var(--branco);
     background: transparent url("../assets/Pesquisa.svg") no-repeat 0.7em ;
 }
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 2.25em;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 5.5em;
+    }
+}
