finalizado carrosel no tablet

--- a/styles/corrosel.css
+++ b/styles/corrosel.css
@@ -84,3 +84,29 @@
     font-weight: 700;
     margin: 0.5em 0 1em;
 }
+
+@media screen and (min-width: 1024px) {
+    .carrosel__titulo {
+        font-size: 1.6rem;
+        padding: 1em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 3em auto;
+    }
+}
