--- a/styles/contato.css
+++ b/styles/contato.css
@@ -39,3 +39,25 @@
     font-size: 1rem;
     font-weight: 400;
 }
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 1.5em 2.5em;
+    }
+
+    .contato__descricao {
+        margin-right: 1em;
+        width: 30%;
+    }
+
+    .contato__titulo {
+        font-size: 1.5rem;
+    }
+
+    .contato__email {
+        width: 40%;
+    }
+}
