finalizando modelo do tablet

--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -6,3 +6,40 @@ hr {
     background-color: var(--branco);
     padding: 1em;
 }
+
+.rodape__educacao {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .rodape {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .rodape__titulo {
+        font-size: 1.5rem;
+    }
+
+    .rodape__educacao {
+        display: block;
+    }
+
+    .rodape__educacao__titulo {
+        font-size: 0.9rem;
+        margin-bottom: 1.5em;
+        color: var(--cinza-claro);
+        text-transform: uppercase;
+    }
+
+    .rodape__educacao__item {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1em;
+    }
+
+    .rodape__educacao__item__texto {
+        margin-left: 0.3em;
+        color: var(--cinza);
+    }
+}
