--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --preta: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
 
     --font-principal: "Poppins", sans-serif;
     --font-secundaria: "Josefin Sans", sans-serif;
