Evolução do header para descktop

--- a/styles/header.css
+++ b/styles/header.css
@@ -65,6 +65,11 @@
 .opcoes {
     display: none;
 }
+
+.container__link > p {
+    display: none;
+}
+
 @media screen and (min-width: 1024px) {
     header {
         padding: 0 2em;
@@ -113,5 +118,26 @@
 
     .container__imagem-transparente {
         display: none;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preta);
+    }
+
+    .container__link > p {
+        display: block;
+    }
+
+    .cabecalho {
+        padding: 0 2em;
+    }
+
+    .opcoes {
+        margin-right: auto;
     }
 }
