--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -42,3 +42,9 @@
         font-size: 1.5rem;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .topico {
+        padding: 3em 25vw;
+    }
+}
