--- a/styles/banner.css
+++ b/styles/banner.css
@@ -46,3 +46,15 @@
         background-position: 5.5em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .banner {
+        padding: 5em 0;
+    }
+    .banner__pesquisa {
+        width: 35%;
+    }
+    .banner__pesquisa::placeholder {
+        background-position: 9.5em;
+    }
+}
